CP4_ConflictosÁrboles/practicalexsinexpr/parser.output
Gramática

    0 $accept: programa $end

    1 programa: RPROGRAM TIDENTIFIER RBEGIN listasentencias RENDPROGRAM TSEMIC

    2 listasentencias: sentencia TSEMIC
    3                | listasentencias sentencia TSEMIC

    4 sentencia: TIDENTIFIER TASSIG expr

    5 expr: expr TMUL expr
    6     | TIDENTIFIER
    7     | TINTEGER
    8     | TDOUBLE


Terminales con las reglas donde aparecen

$end (0) 0
error (256)
TIDENTIFIER (258) 1 4 6
TINTEGER (259) 7
TDOUBLE (260) 8
TMUL (261) 5
TSEMIC (262) 1 2 3
TASSIG (263) 4
RPROGRAM (264) 1
RBEGIN (265) 1
RENDPROGRAM (266) 1


No terminales con las reglas donde aparecen

$accept (12)
    en la izquierda: 0
programa (13)
    en la izquierda: 1, en la derecha: 0
listasentencias (14)
    en la izquierda: 2 3, en la derecha: 1 3
sentencia (15)
    en la izquierda: 4, en la derecha: 2 3
expr (16)
    en la izquierda: 5 6 7 8, en la derecha: 4 5


Estado 0

    0 $accept: . programa $end
    1 programa: . RPROGRAM TIDENTIFIER RBEGIN listasentencias RENDPROGRAM TSEMIC

    RPROGRAM  desplazar e ir al estado 1

    programa  ir al estado 2


Estado 1

    1 programa: RPROGRAM . TIDENTIFIER RBEGIN listasentencias RENDPROGRAM TSEMIC

    TIDENTIFIER  desplazar e ir al estado 3


Estado 2

    0 $accept: programa . $end

    $end  desplazar e ir al estado 4


Estado 3

    1 programa: RPROGRAM TIDENTIFIER . RBEGIN listasentencias RENDPROGRAM TSEMIC

    RBEGIN  desplazar e ir al estado 5


Estado 4

    0 $accept: programa $end .

    $default  aceptar


Estado 5

    1 programa: RPROGRAM TIDENTIFIER RBEGIN . listasentencias RENDPROGRAM TSEMIC
    2 listasentencias: . sentencia TSEMIC
    3                | . listasentencias sentencia TSEMIC
    4 sentencia: . TIDENTIFIER TASSIG expr

    TIDENTIFIER  desplazar e ir al estado 6

    listasentencias  ir al estado 7
    sentencia        ir al estado 8


Estado 6

    4 sentencia: TIDENTIFIER . TASSIG expr

    TASSIG  desplazar e ir al estado 9


Estado 7

    1 programa: RPROGRAM TIDENTIFIER RBEGIN listasentencias . RENDPROGRAM TSEMIC
    3 listasentencias: listasentencias . sentencia TSEMIC
    4 sentencia: . TIDENTIFIER TASSIG expr

    TIDENTIFIER  desplazar e ir al estado 6
    RENDPROGRAM  desplazar e ir al estado 10

    sentencia  ir al estado 11


Estado 8

    2 listasentencias: sentencia . TSEMIC

    TSEMIC  desplazar e ir al estado 12


Estado 9

    4 sentencia: TIDENTIFIER TASSIG . expr
    5 expr: . expr TMUL expr
    6     | . TIDENTIFIER
    7     | . TINTEGER
    8     | . TDOUBLE

    TIDENTIFIER  desplazar e ir al estado 13
    TINTEGER     desplazar e ir al estado 14
    TDOUBLE      desplazar e ir al estado 15

    expr  ir al estado 16


Estado 10

    1 programa: RPROGRAM TIDENTIFIER RBEGIN listasentencias RENDPROGRAM . TSEMIC

    TSEMIC  desplazar e ir al estado 17


Estado 11

    3 listasentencias: listasentencias sentencia . TSEMIC

    TSEMIC  desplazar e ir al estado 18


Estado 12

    2 listasentencias: sentencia TSEMIC .

    $default  reduce usando la regla 2 (listasentencias)


Estado 13

    6 expr: TIDENTIFIER .

    $default  reduce usando la regla 6 (expr)


Estado 14

    7 expr: TINTEGER .

    $default  reduce usando la regla 7 (expr)


Estado 15

    8 expr: TDOUBLE .

    $default  reduce usando la regla 8 (expr)


Estado 16

    4 sentencia: TIDENTIFIER TASSIG expr .  [TSEMIC]
    5 expr: expr . TMUL expr

    TMUL  desplazar e ir al estado 19

    $default  reduce usando la regla 4 (sentencia)


Estado 17

    1 programa: RPROGRAM TIDENTIFIER RBEGIN listasentencias RENDPROGRAM TSEMIC .

    $default  reduce usando la regla 1 (programa)


Estado 18

    3 listasentencias: listasentencias sentencia TSEMIC .

    $default  reduce usando la regla 3 (listasentencias)


Estado 19

    5 expr: . expr TMUL expr
    5     | expr TMUL . expr
    6     | . TIDENTIFIER
    7     | . TINTEGER
    8     | . TDOUBLE

    TIDENTIFIER  desplazar e ir al estado 13
    TINTEGER     desplazar e ir al estado 14
    TDOUBLE      desplazar e ir al estado 15

    expr  ir al estado 20


Estado 20

    5 expr: expr . TMUL expr
    5     | expr TMUL expr .  [TMUL, TSEMIC]

    $default  reduce usando la regla 5 (expr)

    El conflicto entre la regla 5 y el terminal TMUL se resuelve como reducción (%left TMUL).
